Selected the startup parameters for optimal operation of SerialGC